--- a/client-data/board.css
+++ b/client-data/board.css
@@ -214,7 +214,7 @@ input {
 
 #chooseColor {
 	width: 100%;
-	height:100%;
+	height: 100%;
 	border: 0;
 	border-radius: 0;
 	color:black;
@@ -222,6 +222,18 @@ input {
 	margin: 0;
 	padding: 0;
 }
+
+#chooseColorBackground {
+	width: 35px;
+	height: 35px;
+	top: 2.5px;
+	left: 2.5px;
+	position: absolute;
+	mix-blend-mode: multiply;
+	pointer-events: none;
+	mask: url(http://localhost:8081/boards/palette.svg#pColor) no-repeat center / contain;
+	-webkit-mask: url(http://localhost:8081/boards/palette.svg#pColor) no-repeat center / contain;
+  }
 
 .colorPresets {
 	margin-right: 20px;
